Update dependencies; use go-1.6

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: .
+package: github.com/pivotalservices/datadog-dashboard-gen
 import:
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
